--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
   - bundle install
 
   # Install Ansible.
-  - pip install ansible
+  - pip install ansible pytest
 
   # Add ansible.cfg to pick up roles path.
   - "cp ./tests/ansible.cfg ./"
@@ -29,6 +29,9 @@ install:
 script:
   # Check the role/playbook's syntax.
   - ansible-playbook -i tests/inventory tests/test_travis.yml --syntax-check
+
+  # Run filter plugins tests
+  - py.test -v
 
   # Run the role/playbook with ansible-playbook.
   - ansible-playbook -i tests/inventory tests/test_travis.yml --connection=local --sudo
