--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
   - bundle install
 
   # Install Ansible.
-  - pip install ansible pytest
+  - sudo pip install ansible pytest
 
   # Add ansible.cfg to pick up roles path.
   - "cp ./tests/ansible.cfg ./"
