Add travis environment variable for role path

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ language: ruby
 rvm:
   - 2.1.5
 
+env:
+  - ANSIBLE_ROLES_PATH=$TRAVIS_BUILD_DIR
+
 before_install:
   # Make sure everything's up to date.
   - sudo apt-get update -qq
