Change value for ANSIBLE_ROLES_PATH in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ rvm:
   - 2.1.5
 
 env:
-  - ANSIBLE_ROLES_PATH=$TRAVIS_BUILD_DIR
+  - ANSIBLE_ROLES_PATH=$TRAVIS_BUILD_DIR/../
 
 before_install:
   # Make sure everything's up to date.
