Update Travis Ansible version to 2.0 and add pytest

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,15 @@ install:
   # Install ruby dependencies to run serverspec tests
   - bundle install
 
-  # Install Ansible.
-  - sudo pip install ansible pytest
+  # Install Ansible from devel, waiting 2.0 release and pytest.
+  - sudo pip install paramiko PyYAML Jinja2 httplib2 six pytest
+  - git clone https://github.com/ansible/ansible.git ansible_clone
+  - cd ansible_clone
+      && git checkout v2.0.0-0.8.rc3
+      && git submodule init
+      && git submodule update
+      && sudo make install
+      && cd ..
 
   # Add ansible.cfg to pick up roles path.
   - "cp ./tests/ansible.cfg ./"
