--- a/tests/test_travis.yml
+++ b/tests/test_travis.yml
@@ -13,4 +13,8 @@
     vsftpd_chroot_list_file: '/tmp/foo/vsftpd.chroot_list'
     vsftpd_email_password_file: '/tmp/foo/vsftpd.email_password'
     vsftpd_userlist_file: '/tmp/foo/vsftpd.userlist_file'
+    vsftpd_additional_directories_group: travis
+    vsftpd_additional_directories_owner: travis
+    vsftpd_additional_files_group: travis
+    vsftpd_additional_files_owner: travis
 
