--- a/tests/test_travis.yml
+++ b/tests/test_travis.yml
@@ -11,8 +11,8 @@
   vars:
     vsftpd_banned_email_file: '/tmp/foo/vsftpd.banned_emails'
     vsftpd_chroot_list_file: '/tmp/foo/vsftpd.chroot_list'
-    vsftpd_email_password_file: '/tmp/foo/vsftpd.email_password'
-    vsftpd_userlist_file: '/tmp/foo/vsftpd.userlist_file'
+    vsftpd_email_password_file: '/tmp/foo/vsftpd.email_passwords'
+    vsftpd_userlist_file: '/tmp/foo/vsftpd.user_list'
     vsftpd_additional_directories_group: travis
     vsftpd_additional_directories_owner: travis
     vsftpd_additional_files_group: travis
