Update Vagrant environment

--- a/tests/test_vagrant.yml
+++ b/tests/test_vagrant.yml
@@ -5,7 +5,9 @@
 - hosts: all
   remote_user: vagrant
   roles:
-    - vsftpd
+    - "{{ role_name }}"
   post_tasks:
     - include: ./test_common.yml
+  vars:
+    role_name: "{{ lookup('env','ANSIBLE_ROLE_NAME') }}"
 
