--- a/tasks/create_file_with_content.yml
+++ b/tasks/create_file_with_content.yml
@@ -19,6 +19,7 @@
     - "{{ vsftpd_chroot_list_file }}"
     - "{{ vsftpd_email_password_file }}"
     - "{{ vsftpd_userlist_file }}"
+    - "{{ vsftpd_pam_configuration_file }}"
   when: item and (item|dirname != '') and (item|dirname != '/')
 
 
@@ -41,7 +42,8 @@
         "{{ vsftpd_banner_file }}",
         "{{ vsftpd_chroot_list_file }}",
         "{{ vsftpd_email_password_file }}",
-        "{{ vsftpd_userlist_file }}"
+        "{{ vsftpd_userlist_file }}",
+        "{{ vsftpd_pam_configuration_file }}"
       ]
     - [
         "{{ vsftpd_ca_certs_file_content }}",
@@ -53,7 +55,8 @@
         "{{ vsftpd_banner_file_content }}",
         "{{ vsftpd_chroot_list_file_content }}",
         "{{ vsftpd_email_password_file_content }}",
-        "{{ vsftpd_userlist_file_content }}"
+        "{{ vsftpd_userlist_file_content }}",
+        "{{ vsftpd_pam_configuration_file_content }}"
       ]
   when: item.0
   notify: restart vsftpd
