--- a/tests/test_travis.yml
+++ b/tests/test_travis.yml
@@ -14,6 +14,7 @@
     vsftpd_chroot_list_file: '/tmp/foo/vsftpd.chroot_list'
     vsftpd_email_password_file: '/tmp/foo/vsftpd.email_passwords'
     vsftpd_userlist_file: '/tmp/foo/vsftpd.user_list'
+    vsftpd_pam_configuration_file: '/tmp/foo/vsftpd.pam'
     vsftpd_additional_directories_group: travis
     vsftpd_additional_directories_owner: travis
     vsftpd_additional_files_group: travis
