--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -36,6 +36,26 @@ vsftpd_pam_configuration_file_content: |
   @include common-auth
   authrequiredpam_listfilepam_shells.so
 
+# Virtual users management with BerkeleyDB
+#-----------------------------------------
+vsftpd_virtual_users_with_berkeleydb: False
+vsftpd_virtual_users_database: '/etc/vsftpd_users.db'
+vsftpd_virtual_users: []
+vsftpd_virtual_user_root_directory: '/data/ftp'
+vsftpd_virtual_user_directories:
+  - path: '/'
+    owner: ftp
+    group: ftp
+    mode: '0550'
+  - path: '/in'
+    owner: ftp
+    group: ftp
+    mode: '0770'
+  - path: '/out'
+    owner: ftp
+    group: ftp
+    mode: '0770'
+
 # Additional config files
 #------------------------
 vsftpd_additional_directories_group: root
