--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -53,3 +53,10 @@
     - config
     - vsftpd
 
+- name: Include tasks about virtual users
+  include: "{{ role_path }}/tasks/manage_virtual_users.yml"
+  when: vsftpd_virtual_users_with_berkeleydb
+  tags:
+    - config
+    - vsftpd
+
