Manage virtual users database permission

--- a/tasks/manage_virtual_users.yml
+++ b/tasks/manage_virtual_users.yml
@@ -4,23 +4,31 @@
 - name: Clean users database
   become: True
   file:
-    path: "{{ vsftpd_virtual_users_database }}"
+    path: "{{ vsftpd_virtual_users_database_file_name }}"
     state: absent
   when: vsftpd_virtual_users_clean_database
 
 - name: Create or update database
   become: True
-  shell: "echo -e \"{{ item.key }}\n{{ item.value }}\" \
-            | db5.3_load -T -t hash {{ vsftpd_virtual_users_database }}"
+  shell: "echo -e \"{{ item.username }}\n{{ item.password }}\" \
+            | db5.3_load -T -t hash \
+              {{ vsftpd_virtual_users_database_file_name }}"
   with_items: "{{ vsftpd_virtual_users }}"
   changed_when: False
-  when: vsftpd_virtual_users_with_berkeleydb
+
+- name: Set database permissions
+  become: True
+  file:
+    path: "{{ vsftpd_virtual_users_database_file_name }}"
+    owner: "{{ vsftpd_virtual_users_database_file_owner }}"
+    group: "{{ vsftpd_virtual_users_database_file_group }}"
+    mode: "{{ vsftpd_virtual_users_database_file_mode }}"
 
 - name: Create directory structure
   become: True
   file:
     path: "{{ vsftpd_virtual_user_root_directory
-              ~ '/' ~ item.0.key ~ item.1.path }}"
+              ~ '/' ~ item.0.username ~ item.1.path }}"
     owner: "{{ item.1.owner }}"
     group: "{{ item.1.group }}"
     mode: "{{ item.1.mode }}"
