--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -40,7 +40,10 @@ vsftpd_pam_configuration_file_content: |
 #-----------------------------------------
 vsftpd_virtual_users_with_berkeleydb: False
 vsftpd_virtual_users_clean_database: False
-vsftpd_virtual_users_database: '/etc/vsftpd_users.db'
+vsftpd_virtual_users_database_file_name: '/etc/vsftpd_users.db'
+vsftpd_virtual_users_database_file_owner: 'root'
+vsftpd_virtual_users_database_file_group: 'root'
+vsftpd_virtual_users_database_file_mode: '0700'
 vsftpd_virtual_users: []
 vsftpd_virtual_user_root_directory: '/data/ftp'
 vsftpd_virtual_user_directories:
