--- a/tasks/manage_virtual_users.yml
+++ b/tasks/manage_virtual_users.yml
@@ -32,7 +32,7 @@
 - name: Set database permissions
   become: True
   file:
-    path: "{{ vsftpd_virtual_users_database_file_name }}"
+    path: "{{ vsftpd_virtual_users_database_file_name }}.db"
     owner: "{{ vsftpd_virtual_users_database_file_owner }}"
     group: "{{ vsftpd_virtual_users_database_file_group }}"
     mode: "{{ vsftpd_virtual_users_database_file_mode }}"
