--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,7 +7,7 @@ galaxy_info:
   license: MIT
   min_ansible_version: 2.0
   platforms:
-    - name: ubuntu
+    - name: Ubuntu
       versions:
         - trusty
   galaxy_tags:
