--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,9 @@ install:
   # Add ansible.cfg to pick up roles path.
   - "cp ./tests/ansible.cfg ./"
 
+  # Install role dependencies
+  - sudo ansible-galaxy install -r tests/requirements.yml -p ../
+
 script:
   # Check the role/playbook's syntax.
   - ansible-playbook -i tests/inventory tests/test_travis.yml --syntax-check
