Remove virtual users display

--- a/tasks/manage_virtual_users.yml
+++ b/tasks/manage_virtual_users.yml
@@ -46,6 +46,7 @@
     group: "{{ item.1.group }}"
     mode: "{{ item.1.mode }}"
     state: directory
+  no_logs: True
   with_nested:
     - "{{ vsftpd_virtual_users }}"
     - "{{ vsftpd_virtual_user_directories }}"
